# WotLKFunCore

./: CMakeLists.txt  PatchNotes  PreLoad.cmake  README.md  THANKS  WARNING  revision.h  revision.h.in.cmake
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/icc/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/compiler/xcode/: settings.cmake
cmake/macros/: CheckBuildDir.cmake  CheckPlatform.cmake  EnsureVersion.cmake  FindACE.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake  FindReadline.cmake
cmake/platform/: cmake_uninstall.in.cmake  settings.cmake
cmake/platform/osx/: settings.cmake
cmake/platform/unix/: settings.cmake
cmake/platform/win/: settings.cmake
contrib/conf_merge/: index.php  merge.php  tc-conf-merger.pl
dep/: CMakeLists.txt  PackageList.txt
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: CMakeLists.txt
dep/bzip2/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt
dep/jemalloc/: CMakeLists.txt
dep/libmpq/: CMakeLists.txt
dep/mysqllite/: CMakeLists.txt
dep/zlib/: CMakeLists.txt
sql/: README.md
sql/base/: auth_database.sql  characters_database.sql
sql/create/: create_mysql.sql  drop_mysql.sql
sql/updates/auth/: 2016_11_01_00_auth.sql
sql/updates/world/: 2016_11_01_00_world.sql
src/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc
src/server/collision/: CMakeLists.txt  (+8 more)
src/tools/: CMakeLists.txt
(+1254 files in other folders)
